--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 # Dependency directories (remove the comment below to include it)
 vendor/
 
+# libs and binaries
+pkg/
+bin/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
